# kaio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: python-binding-request.md
.github/workflows/: candle-head.yml  ci.yml
docs/: benchmarks.md  debugging.md  implementation.md  index.md  performance.md  phases.md  success-criteria.md  testing-strategy.md
docs/development/: PHASE_1_LOG.md  PHASE_2_LOG.md  phase2_master_plan.md  tech_debt.md
examples/: README.md
examples/fused_silu_gate/: Cargo.toml  README.md
examples/fused_silu_gate/src/: main.rs
examples/gelu_comparison/: Cargo.toml  README.md
examples/gelu_comparison/src/: main.rs
examples/int4_matmul/: Cargo.toml  README.md
examples/int8_dequant/: Cargo.toml  README.md
examples/int8_matmul/: Cargo.toml  README.md
examples/layer_norm/: Cargo.toml  README.md
examples/layer_norm/src/: main.rs
examples/quantized_attention/: Cargo.toml  README.md
examples/quantized_attention/src/: main.rs
examples/rms_norm/: Cargo.toml  README.md
examples/rms_norm/src/: main.rs
kaio/: Cargo.toml  README.md
kaio-candle/: Cargo.toml  README.md
kaio-candle/examples/: attention_tc_candle.rs  matmul_int8_candle.rs  matmul_tc_candle.rs
kaio-candle/src/: attention_tc.rs  bridge.rs  lib.rs  matmul_int4.rs  matmul_int8.rs  matmul_tc.rs  matmul_tc_async.rs  qkv_project_int4.rs  qkv_project_int8.rs
kaio-candle/tests/: candle_gpu_roundtrip.rs
kaio-core/: Cargo.toml
kaio-core/src/: fragment.rs  lib.rs  types.rs
kaio-core/src/emit/: emit_trait.rs  mod.rs
kaio-core/src/instr/: arith.rs  control.rs  memory.rs  mod.rs  tensor_core.rs
kaio-core/src/ir/: instruction.rs  kernel.rs  mod.rs  module.rs  operand.rs  register.rs
kaio-core/tests/: ptxas_verify.rs  vector_add_emit.rs
kaio-core/tests/common/: mod.rs
kaio-macros/: Cargo.toml
kaio-macros/src/: lib.rs
kaio-macros/src/codegen/: launch_wrapper.rs  mod.rs  ptx_builder.rs
kaio-macros/src/kernel_ir/: expr.rs  mod.rs  stmt.rs  types.rs
kaio-macros/src/lower/: arith.rs  builtins.rs  cast.rs  compare.rs  logical.rs  memory.rs  mod.rs  params.rs
kaio-macros/src/parse/: attrs.rs  body.rs  signature.rs
kaio-macros/tests/snapshots/: block_reduce_sum_f32.tokens.txt
kaio-ops/: Cargo.toml  README.md
kaio-ops/examples/: matmul.rs
kaio-ops/src/: attention_kernel.rs  attention_tc_kernel.rs  lib.rs  matmul_int4_kernel.rs  matmul_int8_kernel.rs  matmul_kernel.rs  matmul_tc_async_kernel.rs  matmul_tc_bf16_async_kernel.rs  matmul_tc_bf16_kernel.rs  matmul_tc_kernel.rs  qkv_project_int4_kernel.rs  qkv_project_int8_kernel.rs  qkv_skeleton.rs  store_out.rs  tuner.rs
kaio-ops/tests/: attention_api.rs  attention_flash_bench.rs  attention_tc_api.rs  attention_tc_bench.rs  matmul_api.rs  matmul_bench.rs  matmul_int4_bench.rs  matmul_int4_e2e.rs  matmul_int8_bench.rs  matmul_int8_e2e.rs  matmul_tc_api.rs  matmul_tc_async_api.rs  matmul_tc_bench.rs  matmul_tc_bf16_async_bench.rs  matmul_tc_bf16_async_correctness.rs  matmul_tc_bf16_bench.rs  matmul_tc_bf16_correctness.rs  norm_activation_bench.rs  qkv_project_bench.rs  qkv_project_int4_e2e.rs  qkv_project_int8_e2e.rs  tuner_tc_test.rs  tuner_test.rs
kaio-ops/tests/common/: mod.rs
kaio-py/: Cargo.toml  README.md  pyproject.toml
kaio-py/examples/: hello.py
kaio-py/src/: device.rs  errors.rs  lib.rs  ops.rs  tensor.rs
kaio-runtime/: Cargo.toml
kaio-runtime/src/: buffer.rs  device.rs  error.rs  lib.rs  module.rs
kaio-runtime/tests/: vector_add_e2e.rs
kaio/examples/: reduction.rs  saxpy.rs  vector_add.rs
kaio/src/: gpu_builtins.rs  lib.rs  prelude.rs
kaio/tests/: bitops_macro.rs  compile_fail.rs  compound_bitops_macro.rs  cp_async_roundtrip.rs  f16_buffer.rs  fused_gelu_macro.rs  fused_relu_macro.rs  kernel_2d_macro.rs  logical_short_circuit_macro.rs  loops_macro.rs  macro_pointer_smoke.rs  matmul_macro.rs  mma_sync_fragment.rs  mma_sync_int8_fragment.rs  reduce_macro.rs  saxpy_macro.rs  shared_mem_macro.rs  softmax_macro.rs  vector_add_macro.rs
kaio/tests/compile_fail/: cf01_string_param.rs  cf01_string_param.stderr  cf02_return_type.rs  cf02_return_type.stderr  cf03_println.rs  cf03_println.stderr  cf04_unknown_call.rs  cf04_unknown_call.stderr  cf05_missing_block_size.rs  cf05_missing_block_size.stderr  cf06_block_size_not_pow2.rs  cf07_block_size_too_large.rs  cf07_block_size_too_large.stderr  cf08_lifetime.rs  cf09_loop.rs  cf09_loop.stderr  cf10_generics.rs  cf10_generics.stderr  cf11_2d_reduce_rejected.rs  cf11_2d_reduce_rejected.stderr  cf12_fma_wrong_type.rs  cf12_fma_wrong_type.stderr  cf_warp_reduce_2d_small_product.rs  cf_warp_reduce_2d_small_product.stderr  cf_warp_reduce_partial_warp_48.rs  cf_warp_reduce_partial_warp_48.stderr  cf_warp_reduce_small_block.rs  cf_warp_reduce_small_block.stderr  cf_warp_reduce_wrong_type.rs  cf_warp_reduce_wrong_type.stderr
pyros/: Cargo.toml  LICENSE-MIT  README.md
pyros-core/: Cargo.toml
pyros-macros/: Cargo.toml
pyros-macros/src/: lib.rs
pyros-macros/src/codegen/: launch_wrapper.rs  mod.rs  ptx_builder.rs
pyros-macros/src/kernel_ir/: expr.rs  mod.rs  types.rs
pyros-macros/src/lower/: arith.rs  builtins.rs  cast.rs  compare.rs  memory.rs  mod.rs  params.rs
pyros-macros/src/parse/: attrs.rs  body.rs  mod.rs  signature.rs
pyros-runtime/: Cargo.toml
pyros-runtime/src/: buffer.rs  device.rs  error.rs  lib.rs  module.rs
pyros-runtime/tests/: vector_add_e2e.rs
pyros/src/: gpu_builtins.rs  lib.rs  prelude.rs
pyros/tests/: compile_fail.rs  fused_gelu_macro.rs  fused_relu_macro.rs  saxpy_macro.rs  vector_add_macro.rs
pyros/tests/compile_fail/: cf01_string_param.rs  cf01_string_param.stderr  cf02_return_type.rs  cf03_println.rs  cf04_unknown_call.rs  cf05_missing_block_size.rs  cf06_block_size_not_pow2.rs  cf06_block_size_not_pow2.stderr  cf07_block_size_too_large.rs  cf08_lifetime.rs  cf08_lifetime.stderr  cf09_loop.rs  cf09_loop.stderr  cf10_generics.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+123 files in other folders)
