[workspace]
resolver = "3"
members = ["kaio-core", "kaio-runtime", "kaio-macros", "kaio", "kaio-ops"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Dave Riding <david@netviper.gr>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dmriding/kaio"

[workspace.dependencies]
# cudarc requires selecting one cuda-XXXXX feature to pick FFI binding headers.
# cuda-12080 matches CUDA 12.8 headers. Combined with dynamic-loading, this
# picks the binding ABI at build time but resolves the actual driver at
# runtime via nvcuda.dll / libcuda.so — no CUDA toolkit needed to build.
#
# nvrtc: required for the Ptx type + CudaContext::load_module(). Despite the
# name, we do NOT use NVRTC for C kernel compilation — we use Ptx::from_src()
# to pass KAIO-emitted PTX text to the driver's cuModuleLoadData. The nvrtc
# feature just compiles the module containing these types. With dynamic-loading,
# the NVRTC shared library is only dlopened if compile_ptx() is called (we don't).
cudarc = { version = "0.19", default-features = false, features = ["driver", "std", "dynamic-loading", "cuda-12080", "nvrtc", "f16"] }
half = "2"
thiserror = "2"
