[workspace]
resolver = "3"
members = ["kaio-core", "kaio-runtime", "kaio-macros", "kaio", "kaio-ops", "xtask"]
# `kaio-candle` is intentionally outside the main workspace — cudarc's
# `dynamic-loading` (KAIO default) and `dynamic-linking` (candle-core) features
# are mutually exclusive, and Cargo unions features across a workspace build.
# The bridge crate lives standalone at `kaio-candle/` with its own Cargo.toml;
# build with `cd kaio-candle && cargo build --features cuda`. See
# docs/development/sprints/phase7/reviews/internal_7.4a_plan.md (P2, G3-1).
exclude = ["examples/*", "kaio-candle"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
authors = ["Dave Riding <david@netviper.gr>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dmriding/kaio"

[workspace.dependencies]
# cudarc requires selecting one cuda-XXXXX feature to pick FFI binding headers.
# cuda-12080 matches CUDA 12.8 headers.
#
# nvrtc: required for the Ptx type + CudaContext::load_module(). Despite the
# name, we do NOT use NVRTC for C kernel compilation — we use Ptx::from_src()
# to pass KAIO-emitted PTX text to the driver's cuModuleLoadData. The nvrtc
# feature just compiles the module containing these types.
#
# Loading strategy (`dynamic-loading` vs `dynamic-linking`) is NOT pinned here.
# It's exposed as a per-crate feature in kaio-runtime / kaio-ops / kaio
# (default = `dynamic-loading` — no CUDA toolkit needed to build, driver
# resolved at runtime via nvcuda.dll / libcuda.so). The kaio-candle bridge
# opts into `dynamic-linking` via `default-features = false, features =
# ["dynamic-linking"]` on its kaio/kaio-ops deps — necessary because
# candle-core activates `cudarc/dynamic-linking` and cudarc's build.rs panics
# if both loading strategies are simultaneously active. Keeping the strategy
# opt-in per crate lets standalone KAIO users stay on dynamic-loading while
# candle-bridge builds converge on dynamic-linking without feature-union
# collision.
cudarc = { version = "0.19", default-features = false, features = ["driver", "std", "cuda-12080", "nvrtc", "f16"] }
half = "2"
thiserror = "2"
