[package]
name = "kaio-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macro crate for KAIO — provides #[gpu_kernel] attribute macro."
keywords = ["gpu", "cuda", "ptx", "kernel", "macro"]
categories = ["compilers", "development-tools::procedural-macro-helpers"]

# See kaio-core/Cargo.toml for the docs.rs targets rationale.
[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
