[package]
name = "kaio-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-built GPU operations for KAIO. Matrix multiplication, attention, auto-tuning."
keywords = ["gpu", "cuda", "matmul", "linear-algebra", "compute"]
categories = ["hardware-support", "science"]
readme = "README.md"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
]

# See kaio-core/Cargo.toml for the docs.rs targets rationale.
[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]

[dependencies]
kaio = { version = "0.3.0", path = "../kaio" }
kaio-core = { version = "0.3.0", path = "../kaio-core" }
cudarc = { workspace = true }
half = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cudarc = { version = "0.19", default-features = false, features = ["driver", "std", "dynamic-loading", "cuda-12080", "cublas"] }
