[package]
name = "kaio-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-built GPU operations for KAIO. Matrix multiplication, attention, auto-tuning."
keywords = ["gpu", "cuda", "matmul", "linear-algebra", "compute"]
categories = ["hardware-support", "science"]
readme = "README.md"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
]

# See kaio-core/Cargo.toml for the docs.rs targets rationale.
[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]

[features]
# Forwards the cudarc loading strategy to the kaio umbrella (which forwards
# to kaio-runtime) AND activates it on this crate's own cudarc dep.
# Default `dynamic-loading` preserves the no-CUDA-toolkit story for
# standalone users. kaio-candle consumes this crate with
# `default-features = false, features = ["dynamic-linking"]` to converge
# with candle-core; see root Cargo.toml comment.
default = ["dynamic-loading"]
dynamic-loading = ["cudarc/dynamic-loading", "kaio/dynamic-loading"]
dynamic-linking = ["cudarc/dynamic-linking", "kaio/dynamic-linking"]

[dependencies]
kaio = { version = "0.4.0", path = "../kaio", default-features = false }
kaio-core = { version = "0.4.0", path = "../kaio-core" }
cudarc = { workspace = true }
half = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Adds `cublas` for the benchmark harness; loading strategy comes from the
# crate-level feature block above, unified via the workspace pin.
cudarc = { workspace = true, features = ["cublas"] }
