[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "kaio"
version = "0.1.0"
description = "Rust-native GPU kernel framework: tensor-core matmul, attention, quantized kernels — Windows + Linux, no CUDA toolkit required."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "KAIO contributors" }]
keywords = ["gpu", "cuda", "kernel", "compute", "tensor-core"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Environment :: GPU :: NVIDIA CUDA",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/dmriding/kaio"
Documentation = "https://docs.rs/kaio"

# No `python-source` key — 8.1 is an extension-only module, no pure-
# Python package directory. Add `python-source = "python"` when (and
# if) a pure-Python wrapper layer becomes useful.
#
# No `features = ["pyo3/extension-module"]` key — deprecated by PyO3
# for maturin >= 1.9.4.
