[package]
name = "kaio-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KAIO runtime — CUDA driver API wrapper, kernel launch, and device memory management. Part of the KAIO GPU kernel authoring framework."
keywords = ["gpu", "cuda", "ptx", "runtime", "kernel"]
categories = ["hardware-support"]

[dependencies]
cudarc = { workspace = true }
thiserror = { workspace = true }
kaio-core = { version = "0.1.0", path = "../kaio-core" }
