[package]
name = "kaio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-native GPU kernel authoring framework. Write GPU compute kernels in Rust, automatically lower to PTX. Cross-platform (Windows + Linux), type-safe, no CUDA C++ required."
readme = "README.md"
keywords = ["gpu", "cuda", "ptx", "kernel", "compute"]
categories = ["hardware-support", "compilers", "science"]
include = [
    "/src/**/*.rs",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/Cargo.toml",
    "/README.md",
]

[dependencies]
kaio-core = { version = "0.0.3", path = "../kaio-core" }
kaio-runtime = { version = "0.0.3", path = "../kaio-runtime" }
kaio-macros = { version = "0.0.3", path = "../kaio-macros" }

[dev-dependencies]
trybuild = "1"
