[package]
name = "kaio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-native GPU kernel authoring framework. Write GPU compute kernels in Rust, automatically lower to PTX. Cross-platform (Windows + Linux), type-safe, no CUDA C++ required."
readme = "README.md"
keywords = ["gpu", "cuda", "ptx", "kernel", "compute"]
categories = ["hardware-support", "compilers", "science"]
include = [
    "/src/**/*.rs",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/Cargo.toml",
    "/README.md",
]

# See kaio-core/Cargo.toml for the docs.rs targets rationale.
[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]

[features]
# Umbrella crate — forwards the cudarc loading strategy to kaio-runtime.
# Default `dynamic-loading` preserves the no-CUDA-toolkit story for
# standalone users. kaio-candle consumes this crate with
# `default-features = false, features = ["dynamic-linking"]` to converge
# with candle-core; see root Cargo.toml comment.
default = ["dynamic-loading"]
dynamic-loading = ["kaio-runtime/dynamic-loading"]
dynamic-linking = ["kaio-runtime/dynamic-linking"]

[dependencies]
kaio-core = { version = "0.3.0", path = "../kaio-core" }
# default-features = false — kaio-runtime's default (`dynamic-loading`) is
# activated here by kaio's own feature forwarder, not by default propagation.
# Otherwise kaio-candle's `default-features = false, features = ["dynamic-linking"]`
# opt-in would be bypassed because kaio-runtime's default would remain active,
# activating cudarc/dynamic-loading alongside cudarc/dynamic-linking → panic.
kaio-runtime = { version = "0.3.0", path = "../kaio-runtime", default-features = false }
kaio-macros = { version = "0.3.0", path = "../kaio-macros" }

[dev-dependencies]
cudarc = { workspace = true }
half = { workspace = true }
trybuild = "1"
