[package]
name = "gelu_comparison"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
# Path-dep form keeps this example buildable from a local KAIO checkout.
# To copy this directory outside the repo, drop `path = ...` and cargo
# resolves `kaio` via crates.io.
kaio = { path = "../../kaio", version = "0.4.0" }
