[package]
name = "rms_norm"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
# Path-dep form keeps this example buildable from the KAIO repo. The
# version pin matches the published KAIO crate — after v0.2.0 publishes
# to crates.io, this example can be copied out of the repo and the path
# can be dropped; cargo will resolve via crates.io automatically.
kaio = { path = "../../kaio", version = "0.2.0" }
